centered all text

--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,12 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
 }
+
+.App{
+  text-align: center;
+}
+
+ul {
+  display: inline-block;
+      text-align:left;
+}
