--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,22 @@ body{
 
 .App{
   text-align: center;
+  margin-top: 70px;
+}
+
+.title{
+  margin-bottom: 70px;
+  font-family: 'Montserrat', sans-serif;
+  color: lightblue;
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.additem{
+  font-family: 'Montserrat', sans-serif;
+  color: lightpink;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 ul {
